@@ -1177,6 +1177,9 @@ Revision history for Perl extension Imager.
   - more examples
   - add AUTHOR/REVISION/SEE ALSO
 - add samples/tk-photo.pl
+- fixes to verbose mode in Makefile.PL, also added a -v switch so you 
+  can enable it via the command-line
+  Resolves: http://rt.cpan.org/NoAuth/Bug.html?id=16094
 
 =================================================================
 
